--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Brochure</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
-<body style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f4f4f4;">
-    <iframe 
-        src="./brochure.pdf" 
-        style="width: 90%; height: 90%; border: none;" 
-        title="Business Brochure">
-    </iframe>
+<body>
+    <div class="container">
+        <embed 
+            src="./brochure.pdf" 
+            type="application/pdf" 
+            width="100%" 
+            height="100%">
+        </embed>
+    </div>
 </body>
 </html>
